# KFE-Codec-2

./: .gitignore  README.md  cv2.py  kfe_codec.py  kfe_loopback.py  pyproject.toml  requirements.txt
tests/: test_codec.py  test_loopback.py
